--- a/leaderboard.html
+++ b/leaderboard.html
@@ -61,15 +61,15 @@
     <div class="socialNetworksTable">
         <ul>
             <li><a href="https://www.youtube.com/channel/UC6CIxgtDVaCsJXH6aXn187g" target="_blank"><img
-                        src="images/Youtube.png" alt="YouTube" height="auto" width="100%" /></a></li>
-            <li><a href="https://twitter.com/TeamBestTeam4" target="_blank"><img src="images/twitter.png" alt="Twitter"
-                        height="auto" width="100%" /></a></li>
+                        src="images/Youtube.png" alt="YouTube" /></a></li>
+            <li><a href="https://twitter.com/TeamBestTeam4" target="_blank"><img src="images/twitter.png"
+                        alt="Twitter" /></a></li>
             <li> <a href="https://www.instagram.com/computer_legends1/" target="_blank"><img
-                        src="images/instagram-logo-icone4.png" alt="Instagram" height="auto" width="100%" /></a></li>
+                        src="images/instagram-logo-icone4.png" alt="Instagram" /></a></li>
             <li> <a href="https://github.com/Desire32/Treasure-Hunt-Web-App" target="_blank"><img
-                        src="images/github.png" alt="GitHub" height="auto" width="100%" /></a></li>
+                        src="images/github.png" alt="GitHub" /></a></li>
             <li> <a href="https://discord.com/channels/@me/1218189609947893794/1221559334761136328" target="_blank"><img
-                        src="images/discord.png" alt="Discord" height="auto" width="100%" /></a></li>
+                        src="images/discord.png" alt="Discord" /></a></li>
         </ul>
     </div>
 </footer>
