remove img and do button

--- a/app.html
+++ b/app.html
@@ -87,7 +87,8 @@
         </ul>
 
         
-        <img src="images/QR_Code.png" id="CameraButton" style="display: none;" alt="QR_Code">
+        <button id="CameraButton" style="display: none;">Turn on camera</button>
+
 
     </main>
 
