moving to the js file qrcode

--- a/app.html
+++ b/app.html
@@ -62,12 +62,6 @@
 
         <video id="preview" autoplay="autoplay" style="transform: scaleX(-1);" class="active"></video>
 
-        
-
-        <!--<button id="SwitchCameraButton" style="font-size: 2rem;">Switch</button>-->
-
-
-        <!--<div style="margin: 20px; padding: 20px; background-color: black; color: white; text-align: center;" id="content"></div>-->
 
         <ul id="userInput" class="userInput" style="display: none;">
             <li>
@@ -113,6 +107,7 @@
     <script src="js/cookies.js"></script>
     <script src='js/regPage.js'></script> 
     <script src='js/questionPage.js'></script>
+    <script src='js/qrcode.js'></script>
 
 </body>
 
