--- a/app.html
+++ b/app.html
@@ -60,7 +60,8 @@
 
         <ul id="treasureHunts"></ul>
 
-        <video id="preview" autoplay="autoplay" style="transform: scaleX(-1);" class="active"></video>
+        <video id="preview"></video>
+        <button id="CameraButton">Turn on camera</button>
 
 
         <ul id="userInput" class="userInput" style="display: none;">
@@ -81,7 +82,6 @@
         </ul>
 
         
-        <button id="CameraButton" style="display: none;">Turn on camera</button>
 
 
     </main>
