--- a/app.html
+++ b/app.html
@@ -61,7 +61,7 @@
         <ul id="treasureHunts"></ul>
 
         <video id="preview"></video>
-        <button id="CameraButton">Turn on camera</button>
+        
 
         <ul id="userInput" class="userInput" style="display: none;">
             <li>
@@ -80,7 +80,7 @@
             </li>
         </ul>
 
-    
+        <img src="images/QR_Code.png" id="CameraButton" style="display: none;" alt="QR_Code">
 
     </main>
 
