off camera button

--- a/app.html
+++ b/app.html
@@ -81,6 +81,7 @@
         </ul>
 
         <img src="images/QR_Code.png" id="CameraButton" style="display: none;" alt="QR_Code">
+        <button id="disableButton" style="display: none;">Disable Camera</button>
 
     </main>
 
@@ -105,7 +106,7 @@
     <script src="js/cookies.js"></script>
     <script src='js/regPage.js'></script> 
     <script src='js/questionPage.js'></script>
-    
+
 </body>
 
 </html>
