debug regpage script

--- a/heuristic_evaluation.html
+++ b/heuristic_evaluation.html
@@ -70,6 +70,7 @@
 
     <script src='js/burger-menu.js'></script>
     <script src='js/cookies.js'></script>
+    <script src="js/regPage.js"></script>
 
 </body>
 
