--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 
     <script src='js/burger-menu.js'></script>
     <script src='js/cookies.js'></script>
+    <script src="js/regPage.js"></script>
 
 </body>
 
