--- a/notes.html
+++ b/notes.html
@@ -134,6 +134,7 @@
 
 <script src='js/burger-menu.js'></script>
 <script src='js/cookies.js'></script>
+<script src="js/regPage.js"></script>
 
 </html>
 
