Added roles to the landing page html

--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
             <p class="descriptionIndex">We present to your attention to the Treasure Hunt, in which you will take part
                 in a quiz of various questions in order to get a chance to become the first in the table of record
                 holders!</p>
+            <p class="descriptionIndex">1.Alex has to write all commits we have,Landing page and all social medias
+                2.Orlando has to make half of testing part, it will be enough to check and discuss
+                3.George's gonna fix the borders and make proper buttons
+                4.Constantinos is finishing leaderboard. We need it ASAP
+                5.Nikida is going to fix all small mistakes we have and try to implement QR code.</p>
 
             <div class="teamTable">
                 <ul>
