--- a/test.html
+++ b/test.html
@@ -7,6 +7,13 @@
   <title>Test</title>
   <link rel="stylesheet" type="text/css" href="css/header.css" />
   <link rel="stylesheet" type="text/css" href="css/main.css" />
+  <link rel="icon" href="images/logo.png" type="image/x-icon" />
+  <link rel="apple-touch-icon" href="images/logo.png">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="teal">
+  <meta name="apple-mobile-web-app-title" content="Treasure Hunt">
+  <meta name="msapplication-TileImage" content="images/logo.png">
+  <meta name="msapplication-TileColor" content="#008080">
 </head>
 
 <body>
