--- a/notes.html
+++ b/notes.html
@@ -36,14 +36,13 @@
     padding-left: 0;
   }
 
-  .frontPage{
+  .frontPage {
     margin: 2% 2% 2% 2%;
   }
-
-  </style>
+</style>
 
 <body>
-  
+
   <header class="header-main" id="header">
     <div class="header-main-logo">
       <a href="index.html">
@@ -58,13 +57,13 @@
         <li><a href="notes.html">Notes</a></li>
         <li><a href="test.html">Test</a></li>
         <li><a href="leaderboard.html" id="leaderboard-link">Leaderboard</a></li>
-  
+
       </ul>
     </nav>
     <div class="burger-menu-button">
     </div>
   </header>
-  
+
   <!--Burger menu-->
   <nav class="burger-menu">
     <ul>
@@ -72,62 +71,70 @@
       <li><a href="notes.html">Notes</a></li>
       <li><a href="test.html">Test</a></li>
       <li><a href="leaderboard.html" id="leaderboard-link">Leaderboard</a></li>
-  
+
     </ul>
   </nav>
 
   <main>
-  <ul class="frontPage">
-    <li>
-      <h2 class="date">22/3 lesson time</h2>
-      <p>Everyone is working and updating the code AlexPh and Orlando have worked extensive on the landing page by
-        adding url and correct icons for all the teams social medias updating the names of the valid team members
-        and editing the css files to edit text size, spacing, background font color and more. AlexPh will also add a
-        picture of the finished landing page to our instagram and x accounts. Nikita worked on uniting the js files while
-        also working on the api by designing registering the answers and the questions fixed api reader and general fixes
-        of the code added so far.</p>
-    </li>
-  
-    <li>
-      <h2 class="date">23-24/3 During the weekend</h2>
-      <p>Nikita further worked on advancing the api by adding a skip score and a fixed score panel of 80%
-        Orlando worked further on the landing page by adding polish for different screen sizes and devices.Merged
-        remote-tracking
-        branch 'origin/main' while Constantinos created the leaderboard html.</p>
-    </li>
-  
-    <li>
-      <h2 class="date">25/3 During the week</h2>
-      <p>Nikita Advanced the api by adding cookies and basic location gathering with a script adding alerts for players
-        exiting or not in the
-        boundaries for the questions while also further fixing the leaderboard panel. Giorgos added buttons to begin the
-        treasure hunt
-        while Costantinos added a table to the leaderboard html file.Due to some changes to our landing page AlexPh had
-        added this info to our
-        social media accounts with photo evidence to instagram and x.</p>
-    </li>
-  
-    <li>
-      <h2 class="date">26/3 During the weekend</h2>
-      <p>Nikita Has done various fixes with the code including the score panel, general cookies, leaderboard button api
-        questions and location
-        tracking fixes Orlando added black box unit for text input boxes for testing,General small font changes added
-        logos and updated unit
-        tests logs.Alex worked on the social medias but changing them from personal to busyness accounts could not be done
-        until engagement
-        was shows on the pages.Also increased engagement with the public by adding tags to new posts.</p>
-    </li>
-    <li>
-    <h2 class="date">27/3 during the week</h2>
-    <p>Orlando updated test page to split into multiple sections.Nikita did debugging for api, cookies and treasure hunt made error messgaes for api
-      added a 30 second times for location api and general small fixes of the code.Georgos fix start button.Alex added more content to the social medias.</p>
-    </li>
-    <li>
-      <h2 class="date">29/3 during the week</h2>
-      <p>Nikita debuged the qr code and general fixes with it , css leadeboard fix, and general css fixes for road map,
-        Alex added our team roles into the landing page.</p>
-    </li>
-  </ul>
+    <ul class="frontPage">
+      <li>
+        <h2 class="date">22/3 lesson time</h2>
+        <p>The team was hard at work updating our codebase. AlexPh and Orlando made significant improvements to our
+          landing page,
+          ensuring all social media icons and URLs were correctly integrated. They also polished the design by adjusting
+          text
+          sizes, spacing, backgrounds, and font colors. Meanwhile, Nikita focused on streamlining our JavaScript files
+          and
+          refining the API, fixing any issues with the API reader along the way.</p>
+      </li>
+
+      <li>
+        <h2 class="date">23-24/3 During the weekend</h2>
+        <p>Nikita continued enhancing the API, introducing skip scoring and refining the fixed score panel to achieve an
+          80%
+          completion milestone. Orlando dedicated time to optimizing our landing page for various screen sizes and
+          devices,
+          ensuring a seamless user experience. Additionally, Constantinos contributed by creating the HTML structure for
+          the
+          leaderboard.</p>
+      </li>
+
+      <li>
+        <h2 class="date">25/3 During the week</h2>
+        <p>Nikita further improved the API by implementing cookie management and basic location tracking, while also
+          adding alerts
+          for players who venture beyond the question boundaries. Giorgos introduced new buttons to initiate the
+          treasure hunt,
+          and Constantinos integrated a leaderboard table into our HTML. AlexPh promptly updated our social media
+          channels with
+          news of landing page modifications, accompanied by visual proof.</p>
+      </li>
+
+      <li>
+        <h2 class="date">26/3 During the weekend</h2>
+        <p>Nikita tackled various code-related issues, including those concerning the score panel, cookies, leaderboard
+          functionality, and location tracking. Orlando introduced black box testing for text input fields and made
+          minor font
+          adjustments. Alex focused on transitioning social media accounts to business profiles, contingent upon
+          increased
+          engagement metrics. Efforts were also made to boost public engagement through relevant tags in new posts.</p>
+      </li>
+      <li>
+        <h2 class="date">27/3 during the week</h2>
+        <p>Orlando revamped the test page for better organization into multiple sections. Nikita focused on debugging
+          tasks related
+          to the API, cookies, and treasure hunt feature, and implemented error messages for any API-related issues.
+          Georgos
+          addressed issues with the start button functionality, while Alex expanded the content on our social media
+          platforms.</p>
+      </li>
+      <li>
+        <h2 class="date">29/3 during the week</h2>
+        <p>Nikita resolved debugging issues associated with the QR code feature and addressed CSS-related fixes for the
+          leaderboard
+          and roadmap. Alex incorporated team roles into the landing page to provide clarity and context.</p>
+      </li>
+    </ul>
   </main>
 
   <footer id="footer">
@@ -135,7 +142,8 @@
       <ul>
         <li><a href="https://www.youtube.com/channel/UC6CIxgtDVaCsJXH6aXn187g" target="_blank"><img
               src="images/Youtube.png" alt="YouTube" /></a></li>
-        <li><a href="https://twitter.com/TeamBestTeam4" target="_blank"><img src="images/twitter.png" alt="Twitter" /></a>
+        <li><a href="https://twitter.com/TeamBestTeam4" target="_blank"><img src="images/twitter.png"
+              alt="Twitter" /></a>
         </li>
         <li> <a href="https://www.instagram.com/computer_legends1/" target="_blank"><img
               src="images/instagram-logo-icone4.png" alt="Instagram" /></a></li>
@@ -153,4 +161,3 @@
 <script src='js/cookies.js'></script>
 
 </html>
-
