--- a/heuristic_evaluation.html
+++ b/heuristic_evaluation.html
@@ -48,6 +48,9 @@
             <h1>Heuristic Evaluation Log:</h1>
             <h2>27/03/24 22:50. Heuristic Evaluation Plan:</h2>
             <img src="images/Heuristic_Evaluation_Table.png" width="100%" alt="Heuristic Evaluation Table">
+
+            <h2>29/03/24 13:10. Heuristic Evaluation Plan:</h2>
+            <img src="images/Final_Heuristic.png" width="100%" alt="Heuristic Evaluation Table">
         </div>
     </main>
 
