--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
             <p class="descriptionIndex">We present to your attention to the Treasure Hunt, in which you will take part
                 in a quiz of various questions in order to get a chance to become the first in the table of record
                 holders!</p>
+            <p class="descriptionIndex">We have launched our application on phones, feel free to download and run it directly from
+                your phone!</p>
 
 
             <div class="teamTable">
@@ -66,11 +68,11 @@
                     <li>
                         <h1>Team Members Include:</h1>
                     </li>
-                    <li>Orlando Ballard Testing and css</li>
-                    <li>Alexander Photiou notes socials and css</li>
-                    <li>Nikita Markov css and javascript</li>
-                    <li>Constantinos koliaros js leaderboard</li>
-                    <li>Giorgos Poullou css </li>
+                    <li>Orlando Ballard: Testing</li>
+                    <li>Alexander Photiou: Notes, Social Pages</li>
+                    <li>Nikita Markov: API, CSS</li>
+                    <li>Constantinos koliaros: CSS</li>
+                    <li>Giorgos Poullou: CSS</li>
                 </ul>
             </div>
 
