--- a/notes.html
+++ b/notes.html
@@ -133,6 +133,9 @@
         <p>Nikita resolved debugging issues associated with the QR code feature and addressed CSS-related fixes for the
           leaderboard
           and roadmap. Alex incorporated team roles into the landing page to provide clarity and context.</p>
+
+          <p>Among the additional functions, an application for phones was created that can be downloaded and an interactive panel
+          with questions that moves depending on the question. Work has been done with testing, social networks, documentation and API.</p>
       </li>
     </ul>
   </main>
